# Pickle_Reef

./: .gitignore  PickleHeat - WEBSOCKET_MESSAGES.md  PickleHeat-Commands.md  README.md  WIFI_PROTOCOL.md  docker-compose.yml  picklesump-commands.md  system_setup.md
.devcontainer/: devcontainer.json
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: __init__.py  db.py  main.py
backend/app/api/: __init__.py  routes.py  websocket.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/schemas/: cycle.py  module.py  module_snapshot.py  spool_usage.py  telemetry.py
backend/app/services/: connection_manager.py  cycle_log.py  module_control.py  module_identity.py  module_snapshot.py  module_status.py  mqtt.py  spool_usage.py  telemetry_store.py  ws_trace.py
backend/tests/: conftest.py  test_cycle_history.py  test_smoke.py  test_websocket.py
docs/: chart-pipeline.md  module-protocol-schema.json
frontend/: Dockerfile  package-lock.json  package.json  vite.config.js
frontend/src/: App.svelte  app.css
frontend/src/lib/: ChartWidget.svelte  LineChart.svelte  api.js  chartPipeline.js
infrastructure/scripts/: reefnet-startup.sh  reefnet-watchdog.sh
infrastructure/systemd/: hostapd-wlan1.conf  reefnet-watchdog.service
pi-touch-app/: .gitignore  README.md  package-lock.json  package.json  vite.config.js
pi-touch-app/src/: app.html
pi-touch-app/src-tauri/: Cargo.toml  tauri.conf.json
pi-touch-app/src-tauri/src/: lib.rs  main.rs
pi-touch-app/src/lib/: LineChart.svelte  TempHistoryChart.svelte  TouchChartFrame.svelte  (+3 more)
(+1 files in other folders)
